<resources>
    <string name="app_name">Feedler</string>
    <integer name="com_vk_sdk_AppId">7380598</integer>
    <string name="vk">Авторизация VK</string>
    <string name="fb">Авторизация FB</string>
    <string name="buttonList">Перейти к ленте</string>
    <string name="in_vk">VK</string>
    <string name="in_facebook">FaceBook</string>
    <string name="in_twitter">Twitter</string>
    <string name="feedler">Feedler</string>
    <string name="chooser" />
    <string name="Favor">Избранное</string>
    <string name="Settings">Настройки</string>
    <string name="Auth">Авторизация</string>
    <string name="Exit">Выход</string>
    <string name="Refresh">Обновить</string>
    <string name="Delete">Очистить всё</string>
    <string name="Favorite">Избранное</string>
    <string name="MainFeed">Лента</string>
    <string name="Dark">Темная</string>
    <string name="Light">Светлая</string>
    <string name="Theme">Тема</string>
    <string name="InnerBrowser">Встроенный браузер</string>
</resources>
