<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    >
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/Theme"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/submenu1"
                android:title="@string/Dark" />
            <item
                android:id="@+id/submenu2"
                android:title="@string/Light" />
        </menu>

    </item>

    <item
        android:id="@+id/authorization"
        android:orderInCategory="100"
        android:title="@string/Auth"
        app:showAsAction="never"/>

    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/Exit"
        app:showAsAction="never"/>
</menu>